 - [DEV-262] added group filtering for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.7

 - [ZBX-596] fixed support of IPV6 under Windows 2000 (Sasha)
 - [ZBX-982] fixed message when can't delete application with web items (Vedmak)
 - [ZBX-861] fixed problem with disappearing nodes in frontend (Artem)

Changes for 1.6.6

 - [ZBX-1024] added check for same application name in linked hosts (Vedmak)
 - [ZBX-1014] fixed gaps on graph with fixed y axis (Artem)
 - [ZBX-1013] fixed evaluation of aggregate items for proxy hosts (Sasha)
 - [ZBX-1011] zabbix_sender will send data in blocks of 250 values per TCP connection (Sasha)
 - [DEV-417] added services[] metric for Windows agents (Sasha)
 - [ZBX-1005] fixed evaluations of functions diff, change and abschange for character items if received value more than 255 characters (Sasha)
 - [ZBX-1004] made snmp parameters editable in templated items (Artem)
 - [ZBX-1001] fixed possible server crash while processing macros {ITEM.LASTVALUE} (Sasha)
 - [ZBX-999] fixed query in availability reports (Artem)
 - [ZBX-996] fixed possible server crash with enabled StartDBSyncers option (Sasha)
 - [ZBX-993] fixed possible vulnerability of trapper (Sasha)
 - [ZBX-964] added check on item in trigger expression (Artem)
 - [ZBX-987] fixed shutting down server/proxy after connection lost to remote mysql server (Sasha)
 - [ZBX-809] fixed memory leak while processing perf_counter metric under Windows (Sasha)
 - [ZBX-959] fixed windows agent crash while processing performance counters under Windows 2000. Thanks to Takanori Suzuki (Sasha)
 - [ZBX-733] added checks on value map creation/update (Artem)
 - [ZBX-768] improved menu linebreaking (Artem)